cluster/database/postgre/pgAdmin/003-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: pgadmin
  namespace: database
  labels:
    app: pgadmin
spec:
  type: NodePort
  ports:
    - name: 
      port: 80
      nodePort: 30889
  selector:
    app: pgadmin
